theme: dark mode fixes

--- a/static/themes/dark.css
+++ b/static/themes/dark.css
@@ -30,9 +30,13 @@ header {
   color: rgb(209, 207, 204);
 }
 
+.social-media-icon svg {
+  color: rgb(199 162 127);
+}
+
 /* Background cover Home */
 
-main > section:not(.code-of-conduct) {
+main > section.hero {
   background-color: #012a1c;
 }
 
